--- a/openhpi/trunk/baselibs/python/README
+++ b/openhpi/trunk/baselibs/python/README
@@ -12,6 +12,9 @@ Usage Example:
 
 See example.py as an example of using the Python OpenHPI baselib.
 
+See example_lsres.py and example_ent.py as examples of using iteration
+utility functions.
+
 Default domain address is "localhost" or OPENHPI_DAEMON_HOST env. var. value.
 Default domain address is 4743 or OPENHPI_DAEMON_PORT env. var. value.
 
