--- a/openhpi/trunk/baselibs/java/README
+++ b/openhpi/trunk/baselibs/java/README
@@ -12,6 +12,7 @@ Build and Install Instructions:
 Usage Example:
 
 See example/Example.java as an example of using the Java OpenHPI baselib.
+See example_handlers.cs as an example of using the oHpiHandler*() API.
 
 Default domain address is "localhost" or OPENHPI_DAEMON_HOST env. var. value.
 Default domain address is 4743 or OPENHPI_DAEMON_PORT env. var. value.
@@ -114,7 +115,7 @@ the array length is valid.
 ================================================================================
 Current Limitations:
 
-- Only oHpiVersionGet() and oHpiDomainAdd() OpenHPI API are supported
+- Only oHpiVersionGet(), oHpiDomainAdd() and oHpiHandler*() OpenHPI API are supported
 - openhpiclient.conf is not supported
 
 ================================================================================
