--- a/openhpi/trunk/baselibs/java/README
+++ b/openhpi/trunk/baselibs/java/README
@@ -11,8 +11,9 @@ Build and Install Instructions:
 ================================================================================
 Usage Example:
 
-See example/Example.java as an example of using the Java OpenHPI baselib.
-See example_handlers.cs as an example of using the oHpiHandler*() API.
+See example/ as an example of using the Java OpenHPI baselib.
+See example_handlers/ as an example of using the oHpiHandler*() API.
+See example_collections/ as an example of using the Java OpenHPI collections.
 
 Default domain address is "localhost" or OPENHPI_DAEMON_HOST env. var. value.
 Default domain address is 4743 or OPENHPI_DAEMON_PORT env. var. value.
